update mkt coeff

--- a/indices_explore/indices_explore.ipynb
+++ b/indices_explore/indices_explore.ipynb
@@ -290,17 +290,12 @@
     "    p1 = p1.dropna() \n",
     "    p2 = p2.dropna()\n",
     "    def mrk_eff_cal(p1):\n",
-    "        d_ret = p1 - p1.shift(1)\n",
-    "        m_ret = p1 - p1.shift(20)\n",
-    "        mrk_eff_coef = np.var(d_ret.dropna())/(20*np.var(m_ret.dropna()))\n",
+    "        d_ret = np.log(p1 - p1.shift(1))\n",
+    "        m_ret = np.log(p1 - p1.shift(20))\n",
+    "        mrk_eff_coef = np.var(m_ret.dropna())/(20*np.var(d_ret.dropna()))\n",
     "        return mrk_eff_coef\n",
     "    output['mrk_eff_coef_1'] = [np.round(mrk_eff_cal(p1), 4)]\n",
     "    output['mrk_eff_coef_2'] = [np.round(mrk_eff_cal(p2), 4)]\n",
-    "\n",
-    "    d_ret = p1 - p1.shift(1)\n",
-    "    m_ret = p1 - p1.shift(20)\n",
-    "    mrk_eff_coef = np.var(d_ret.dropna())/(20*np.var(m_ret.dropna()))\n",
-    "    output['mrk_eff_coef_1'] = [np.round(mrk_eff_coef, 4)]\n",
     "\n",
     "    df1 = df[index1][['Adj Close','Volume']].dropna()\n",
     "    df2 = df[index2][['Adj Close','Volume']].dropna()\n",
