upload linear prediction code & result

--- a/baseline/baseline pipeline.ipynb
+++ b/baseline/baseline pipeline.ipynb
@@ -1023,6 +1023,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9e890f3ce1571bb4f89d681fd99721122e506cb360467a10a806de210ffe7a4a"
+   }
   }
  },
  "nbformat": 4,
