Add XGBoost Predictor

--- a/pipeline/pipeline.ipynb
+++ b/pipeline/pipeline.ipynb
@@ -129,6 +129,34 @@
     "\n",
     "    def periodic_train_predict(self, data: Optional[pd.DataFrame] = None, params: Optional[Mapping] = None) -> pd.DataFrame:\n",
     "        return self.predict(data, params)\n",
+    
+    "class XGBPredictor(Predictor):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def train(self, data: Optional[pd.DataFrame] = None, params: Optional[Mapping] = None):\n",
+    "        pass\n",
+    "\n",
+    "    def predict(self, data: Optional[pd.DataFrame] = None, params: Optional[Mapping] = None) -> pd.DataFrame:\n",
+    "        # return pd.read_csv(\"mock_evaluation_df.csv\")\n",
+    "        if params is None:\n",
+    "            params = {\n",
+    "                'pred_period': 'D'\n",
+    "            }\n",
+    "        pred_period = params['pred_period'] \n",
+    "        if pred_period == 'D':\n",
+    "            with open('../prediction/xgboost_model/predict/ReturnSpreadPredictions_d.pkl', 'rb') as f:\n",
+    "                return pickle.load(f)\n",
+    "        if pred_period == 'M':\n",
+    "            return self.predict(data, params)\n"
+    "        if pred_period == 'W':\n",
+    "            with open('../prediction/xgboost_model/predict/ReturnSpreadPredictions_w.pkl', 'rb') as f:\n",
+    "                return pickle.load(f)\n",
+    "        with open('../prediction/linear_model/predict/ReturnSpreadPredictions_d.pkl', 'rb') as f:\n",
+    "                return pickle.load(f)\n",
+    "\n",
+    "    def periodic_train_predict(self, data: Optional[pd.DataFrame] = None, params: Optional[Mapping] = None) -> pd.DataFrame:\n",
+    "        return self.predict(data, params)\n",
     "    "
    ]
   },
