add lstm w and m

--- a/lstm/lstm_agg.ipynb
+++ b/lstm/lstm_agg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,13 +39,13 @@
        "       'RXI_WOOD'], dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"Final TrainingSet.csv\")\n",
+    "data = pd.read_csv(\"/Users/jinghan/Documents/UCB/Winter/IAQF_Competition/data/TrainingSet.csv\")\n",
     "data.index = data['Date']\n",
     "data.index = pd.to_datetime(data.index)\n",
     "\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -83,13 +83,13 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr>\n",
+       "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Date</th>\n",
        "      <th>actual_spread</th>\n",
@@ -101,36 +101,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2008-04-14</td>\n",
-       "      <td>-0.0009</td>\n",
-       "      <td>-0.003942</td>\n",
+       "      <td>0.0310</td>\n",
+       "      <td>0.026517</td>\n",
        "      <td>IJH_ACWI</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2008-04-15</td>\n",
-       "      <td>0.0071</td>\n",
-       "      <td>-0.002335</td>\n",
+       "      <td>0.0307</td>\n",
+       "      <td>0.031189</td>\n",
        "      <td>IJH_ACWI</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2008-04-16</td>\n",
-       "      <td>0.0106</td>\n",
-       "      <td>0.011569</td>\n",
+       "      <td>0.0267</td>\n",
+       "      <td>0.032527</td>\n",
        "      <td>IJH_ACWI</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2008-04-17</td>\n",
-       "      <td>-0.0031</td>\n",
-       "      <td>0.007587</td>\n",
+       "      <td>0.0239</td>\n",
+       "      <td>0.029297</td>\n",
        "      <td>IJH_ACWI</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2008-04-18</td>\n",
-       "      <td>-0.0035</td>\n",
-       "      <td>0.003280</td>\n",
+       "      <td>0.0115</td>\n",
+       "      <td>0.025657</td>\n",
        "      <td>IJH_ACWI</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -141,79 +141,79 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3657</th>\n",
-       "      <td>2023-01-24</td>\n",
-       "      <td>-0.0077</td>\n",
-       "      <td>-0.009958</td>\n",
+       "      <th>3641</th>\n",
+       "      <td>2022-12-29</td>\n",
+       "      <td>0.0686</td>\n",
+       "      <td>0.078710</td>\n",
        "      <td>RXI_WOOD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3658</th>\n",
-       "      <td>2023-01-25</td>\n",
-       "      <td>-0.0097</td>\n",
-       "      <td>-0.006757</td>\n",
+       "      <th>3642</th>\n",
+       "      <td>2022-12-30</td>\n",
+       "      <td>0.0754</td>\n",
+       "      <td>0.062674</td>\n",
        "      <td>RXI_WOOD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3659</th>\n",
-       "      <td>2023-01-26</td>\n",
-       "      <td>-0.0180</td>\n",
-       "      <td>-0.009264</td>\n",
+       "      <th>3643</th>\n",
+       "      <td>2023-01-03</td>\n",
+       "      <td>0.0799</td>\n",
+       "      <td>0.066786</td>\n",
        "      <td>RXI_WOOD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3660</th>\n",
-       "      <td>2023-01-27</td>\n",
-       "      <td>0.0055</td>\n",
-       "      <td>-0.011281</td>\n",
+       "      <th>3644</th>\n",
+       "      <td>2023-01-04</td>\n",
+       "      <td>0.0589</td>\n",
+       "      <td>0.072666</td>\n",
        "      <td>RXI_WOOD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3661</th>\n",
-       "      <td>2023-01-30</td>\n",
-       "      <td>-0.0134</td>\n",
-       "      <td>0.001809</td>\n",
+       "      <th>3645</th>\n",
+       "      <td>2023-01-05</td>\n",
+       "      <td>0.0703</td>\n",
+       "      <td>0.052452</td>\n",
        "      <td>RXI_WOOD</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>198142 rows × 4 columns</p>\n",
+       "<p>197342 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Date actual_spread pred_spread      pair\n",
-       "0     2008-04-14       -0.0009   -0.003942  IJH_ACWI\n",
-       "1     2008-04-15        0.0071   -0.002335  IJH_ACWI\n",
-       "2     2008-04-16        0.0106    0.011569  IJH_ACWI\n",
-       "3     2008-04-17       -0.0031    0.007587  IJH_ACWI\n",
-       "4     2008-04-18       -0.0035    0.003280  IJH_ACWI\n",
-       "...          ...           ...         ...       ...\n",
-       "3657  2023-01-24       -0.0077   -0.009958  RXI_WOOD\n",
-       "3658  2023-01-25       -0.0097   -0.006757  RXI_WOOD\n",
-       "3659  2023-01-26       -0.0180   -0.009264  RXI_WOOD\n",
-       "3660  2023-01-27        0.0055   -0.011281  RXI_WOOD\n",
-       "3661  2023-01-30       -0.0134    0.001809  RXI_WOOD\n",
+       "            Date  actual_spread  pred_spread      pair\n",
+       "0     2008-04-14         0.0310     0.026517  IJH_ACWI\n",
+       "1     2008-04-15         0.0307     0.031189  IJH_ACWI\n",
+       "2     2008-04-16         0.0267     0.032527  IJH_ACWI\n",
+       "3     2008-04-17         0.0239     0.029297  IJH_ACWI\n",
+       "4     2008-04-18         0.0115     0.025657  IJH_ACWI\n",
+       "...          ...            ...          ...       ...\n",
+       "3641  2022-12-29         0.0686     0.078710  RXI_WOOD\n",
+       "3642  2022-12-30         0.0754     0.062674  RXI_WOOD\n",
+       "3643  2023-01-03         0.0799     0.066786  RXI_WOOD\n",
+       "3644  2023-01-04         0.0589     0.072666  RXI_WOOD\n",
+       "3645  2023-01-05         0.0703     0.052452  RXI_WOOD\n",
        "\n",
-       "[198142 rows x 4 columns]"
+       "[197342 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_all.columns = [['Date','actual_spread','pred_spread','pair']]\n",
+    "df_all.columns = ['Date','actual_spread','pred_spread','pair']\n",
     "df_all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all.to_pickle(\"ReturnSpreadPredictions_w.pkl\")"
+    "df_all.to_pickle(\"ReturnSpreadPredictions_M.pkl\")"
    ]
   }
  ],
